# crudtoml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
crudtoml/: __init__.py  __main__.py
tests/: __init__.py  test_read.py  test_readme.py
tests/test_data/: README.md  test.toml
