[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crudtoml"
authors = [{name = "Edward Knight", email = "edw@rdknig.ht"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "tomlkit ~= 0.8",  # keep in sync with .pre-commit-config.yaml
]

[project.scripts]
crudtoml = "crudtoml:main"

[project.urls]
Home = "https://github.com/Edward-Knight/crudtoml"
