[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crudtoml"
authors = [{name = "Edward Knight", email = "edw@rdknig.ht"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["TOML"]
dynamic = ["version", "description"]
requires-python = "~= 3.10"
dependencies = [
    "tomlkit ~= 0.8",  # keep in sync with .pre-commit-config.yaml
]

[project.scripts]
crudtoml = "crudtoml:main"

[project.urls]
Home = "https://github.com/Edward-Knight/crudtoml"

[project.optional-dependencies]
test = [
    "pytest ~= 7.3",
    "pytest-cov ~= 4.1",
]


[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=crudtoml",
    "--cov-branch",
]
required_plugins = [
    "pytest-cov",
]
log_file_level = "DEBUG"
xfail_strict = true
filterwarnings = [
    "error",
]
